--- a/contact.html
+++ b/contact.html
@@ -19,7 +19,7 @@
 
     <section class="section">
         <h2>Send me a message</h2>
-        <form action="mailto:your.email@example.com" method="post" enctype="text/plain">
+        <form action="mailto:ikuzowesley@gmail.com" method="post" enctype="text/plain">
             <label for="name">Name:</label><br />
             <input type="text" id="name" name="name" required /><br /><br />
 
